[gd_scene load_steps=33 format=3 uid="uid://o8mimpwaxmjg"]

[ext_resource type="Script" path="res://scripts/networking/network entities/interactable_network_entity.gd" id="1_4pguk"]
[ext_resource type="Script" path="res://scripts/components/spawn components/spawn_transform_setter.gd" id="2_1h832"]
[ext_resource type="Script" path="res://scripts/components/controllers/creature ai/roomba_controller.gd" id="3_v38n8"]
[ext_resource type="Script" path="res://scripts/components/input/input interfaces/rotation_input_interface.gd" id="5_3vgnh"]
[ext_resource type="Script" path="res://scripts/components/input/input interfaces/movement_input_interface.gd" id="5_r67nx"]
[ext_resource type="Script" path="res://scripts/components/controllers/state_machine.gd" id="6_olusw"]
[ext_resource type="Script" path="res://scripts/states/movement states/creature_movement_state.gd" id="7_hvyk3"]
[ext_resource type="Script" path="res://scripts/states/movement states/creature_ground_run_state.gd" id="8_arpej"]
[ext_resource type="Script" path="res://scripts/states/movement states/creature_jump_state.gd" id="9_xnbbf"]
[ext_resource type="Script" path="res://scripts/components/inventory/creature_item_user.gd" id="10_xthvs"]
[ext_resource type="Script" path="res://scripts/components/attribute holders/creature_attributes.gd" id="24_31ywg"]
[ext_resource type="Script" path="res://scripts/components/inventory/player_inventory_component.gd" id="25_4yy2u"]
[ext_resource type="Script" path="res://scripts/components/inventory/inventory visual/display_tool_item.gd" id="26_7rn5b"]
[ext_resource type="Script" path="res://scripts/components/utility/set_material_based_on_owner.gd" id="27_w30xs"]
[ext_resource type="Script" path="res://scripts/components/sync/position_sync.gd" id="28_cw0cl"]
[ext_resource type="Script" path="res://scripts/components/sync/optimized_rotation_sync.gd" id="29_wnspy"]
[ext_resource type="Script" path="res://scripts/debug/debug_interactable_zone.gd" id="30_m3t02"]
[ext_resource type="PackedScene" uid="uid://saxv52hm6fdc" path="res://scenes/testing_visual/peojectile_hit_mark_red.tscn" id="31_dcbxr"]
[ext_resource type="PackedScene" uid="uid://bdog4nuqi8171" path="res://scenes/testing_visual/peojectile_hit_mark_orange.tscn" id="32_4tjj1"]
[ext_resource type="Script" path="res://scripts/per object logic/visual_mine_trigger.gd" id="33_yps7r"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wuj5g"]
albedo_color = Color(0.196071, 0.25379, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rjudh"]
albedo_color = Color(0.373333, 1, 0.2, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4ttwh"]
albedo_color = Color(1, 0.2, 0.2, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qgny7"]
albedo_color = Color(1, 0.666667, 0.2, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_www38"]
albedo_color = Color(0.773333, 0.2, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qr1bo"]
albedo_color = Color(0.2, 1, 0.986667, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hj1vt"]
albedo_color = Color(0.520433, 1, 0.235412, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_lbp1g"]
height = 0.2

[sub_resource type="CylinderMesh" id="CylinderMesh_atlbh"]
top_radius = 0.05
bottom_radius = 0.1
height = 0.25
cap_bottom = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_favc5"]
albedo_color = Color(0, 0, 0, 1)
emission_enabled = true
emission = Color(1, 0.4177, 0, 1)
emission_energy_multiplier = 3.24

[sub_resource type="BoxMesh" id="BoxMesh_2wwqf"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_riq58"]
height = 0.2

[node name="NetworkPlayerTest" type="Node" node_paths=PackedStringArray("spawn_logic", "ownerLogic", "sharedLogic")]
script = ExtResource("1_4pguk")
authority_interaction_priority = 1
spawn_logic = NodePath("SpawnLogic")
ownerLogic = NodePath("OwnerLogic")
sharedLogic = NodePath("SharedLogic")

[node name="SpawnLogic" type="Node" parent="."]

[node name="SpawnTransformSetter" type="Node" parent="SpawnLogic" node_paths=PackedStringArray("positional_node")]
script = ExtResource("2_1h832")
positional_node = NodePath("../../Player")

[node name="OwnerLogic" type="Node" parent="."]

[node name="--- AI & Input ---" type="Node" parent="OwnerLogic"]

[node name="RoombaAI" type="Node" parent="OwnerLogic" node_paths=PackedStringArray("movement_input_interface", "rotation_input_interface", "roomba_timer", "network_entity")]
script = ExtResource("3_v38n8")
roomba_line_time_min_max = Vector2(3, 6)
movement_input_interface = NodePath("../MovementInputInterface")
rotation_input_interface = NodePath("../RotationInputInterface")
roomba_timer = NodePath("Timer")
network_entity = NodePath("../..")

[node name="Timer" type="Timer" parent="OwnerLogic/RoombaAI"]
autostart = true

[node name="MovementInputInterface" type="Node" parent="OwnerLogic" node_paths=PackedStringArray("network_entity")]
script = ExtResource("5_r67nx")
network_entity = NodePath("../..")

[node name="RotationInputInterface" type="Node" parent="OwnerLogic" node_paths=PackedStringArray("head_node_to_rotate", "look_node_to_rotate")]
script = ExtResource("5_3vgnh")
auto_rotate_head = true
auto_rotate_speed = 1.0
head_node_to_rotate = NodePath("../../Player")
look_node_to_rotate = NodePath("../../Player/Head")

[node name="--- Movement & Rotation ---" type="Node" parent="OwnerLogic"]

[node name="MovementStateMachine" type="Node" parent="OwnerLogic" node_paths=PackedStringArray("current_state", "network_entity")]
script = ExtResource("6_olusw")
current_state = NodePath("CreatureMovementState")
network_entity = NodePath("../..")

[node name="CreatureMovementState" type="Node" parent="OwnerLogic/MovementStateMachine" node_paths=PackedStringArray("creature_attributes", "movement_input_interface", "next_states")]
script = ExtResource("7_hvyk3")
creature_attributes = NodePath("../../../SharedLogic/CreatureAttributes")
movement_input_interface = NodePath("../../MovementInputInterface")
speed_mult = 0.7
next_states = [NodePath("../CreatureRunState"), NodePath("../CreatureJumpState")]

[node name="CreatureRunState" type="Node" parent="OwnerLogic/MovementStateMachine" node_paths=PackedStringArray("creature_attributes", "movement_input_interface", "next_states")]
script = ExtResource("8_arpej")
creature_attributes = NodePath("../../../SharedLogic/CreatureAttributes")
movement_input_interface = NodePath("../../MovementInputInterface")
speed_mult = 1.1
next_states = [NodePath("../CreatureMovementState"), NodePath("../CreatureJumpState")]

[node name="CreatureJumpState" type="Node" parent="OwnerLogic/MovementStateMachine" node_paths=PackedStringArray("creature_attributes", "movement_input_interface", "next_states")]
script = ExtResource("9_xnbbf")
jump_power = 2.0
creature_attributes = NodePath("../../../SharedLogic/CreatureAttributes")
movement_input_interface = NodePath("../../MovementInputInterface")
max_accel = 1.0
max_angle_correct = 0.1
next_states = [NodePath("../CreatureMovementState")]

[node name="--- Items & Inventory ---" type="Node" parent="OwnerLogic"]

[node name="CreatureItemUser" type="Node" parent="OwnerLogic" node_paths=PackedStringArray("spatial_node", "character_body", "network_entity")]
script = ExtResource("10_xthvs")
spatial_node = NodePath("../../Player/SpatialItemUse")
character_body = NodePath("../../Player")
network_entity = NodePath("../..")

[node name="--- Visuals & Looks ---" type="Node" parent="OwnerLogic"]

[node name="--- Other --" type="Node" parent="OwnerLogic"]

[node name="--- Debugging & Testing ---" type="Node" parent="OwnerLogic"]

[node name="SharedLogic" type="Node" parent="."]

[node name="CreatureAttributes" type="Node" parent="SharedLogic" node_paths=PackedStringArray("character_body", "head_node", "look_node", "spatial_node", "network_entity")]
script = ExtResource("24_31ywg")
character_body = NodePath("../../Player")
head_node = NodePath("../../Player")
look_node = NodePath("../../Player/Head")
creature_speed = 2.0
spatial_node = NodePath("../../Player")
network_entity = NodePath("../..")

[node name="CreatureInventory" type="Node" parent="SharedLogic" node_paths=PackedStringArray("network_entity")]
script = ExtResource("25_4yy2u")
inventory_size = 9
network_entity = NodePath("../..")

[node name="DisplayToolItem" type="Node" parent="SharedLogic/CreatureInventory" node_paths=PackedStringArray("tool_item_parent_node")]
script = ExtResource("26_7rn5b")
tool_item_parent_node = NodePath("../../../Player/Head/ToolItemDisplay")

[node name="SetMaterialBasedOnOwner" type="Node" parent="SharedLogic" node_paths=PackedStringArray("mesh", "network_entity")]
script = ExtResource("27_w30xs")
materials = Array[Material]([SubResource("StandardMaterial3D_wuj5g"), SubResource("StandardMaterial3D_rjudh"), SubResource("StandardMaterial3D_4ttwh"), SubResource("StandardMaterial3D_qgny7"), SubResource("StandardMaterial3D_www38"), SubResource("StandardMaterial3D_qr1bo")])
mesh = NodePath("../../Player/MeshInstance3D/HatMesh")
network_entity = NodePath("../..")

[node name="PositionSync" type="Node" parent="SharedLogic" node_paths=PackedStringArray("node_to_sync", "network_entity")]
script = ExtResource("28_cw0cl")
node_to_sync = NodePath("../../Player")
network_entity = NodePath("../..")

[node name="OptimizedRotationSyncComponent" type="Node" parent="SharedLogic" node_paths=PackedStringArray("node_to_sync", "network_entity")]
script = ExtResource("29_wnspy")
node_to_sync = NodePath("../../Player")
network_entity = NodePath("../..")

[node name="DebugInteractableZone" type="Node" parent="SharedLogic" node_paths=PackedStringArray("network_entity")]
script = ExtResource("30_m3t02")
local_collision_indicator_scene = ExtResource("31_dcbxr")
shared_collision_indicator_scene = ExtResource("32_4tjj1")
network_entity = NodePath("../..")

[node name="Player" type="CharacterBody3D" parent="."]

[node name="VisualMineTrigger" type="Node3D" parent="Player"]
script = ExtResource("33_yps7r")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
material_override = SubResource("StandardMaterial3D_hj1vt")
mesh = SubResource("CylinderMesh_lbp1g")

[node name="HatMesh" type="MeshInstance3D" parent="Player/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.213758, 0)
mesh = SubResource("CylinderMesh_atlbh")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Player/MeshInstance3D"]
transform = Transform3D(0.448426, 0, 0, 0, 0.0700309, 0, 0, 0, 0.0970247, 0, 0.0944061, -0.269432)
material_override = SubResource("StandardMaterial3D_favc5")
mesh = SubResource("BoxMesh_2wwqf")
skeleton = NodePath("../..")

[node name="RoombaCollider" type="CollisionShape3D" parent="Player"]
shape = SubResource("CylinderShape3D_riq58")

[node name="SpatialItemUse" type="Node3D" parent="Player"]

[node name="Head" type="Node3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.70364, 0)

[node name="ToolItemDisplay" type="Node3D" parent="Player/Head"]

[connection signal="authority_changed" from="." to="SharedLogic/SetMaterialBasedOnOwner" method="_on_entity_authority_change"]
[connection signal="timeout" from="OwnerLogic/RoombaAI/Timer" to="OwnerLogic/RoombaAI" method="on_timer_timeout"]
